ingressroutes/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
        #  tls:
        #      - secretName: argo-tls-secret
        #        hosts:
        #          - argocd.k8s.lenin.nu
  rules:
    - host: argocd.k8s.lenin.nu
      http:
        paths:
        - path: /
          backend:
            serviceName: argocd-server
            servicePort: http
            namespace: argocd
